app/assets/stylesheets/application.scss
@import "bootstrap-sprockets";
@import "bootstrap";
@import "toastr";
@import "fullcalendar";

// For separting venue's key features into two colums on venues/shows
// @media only screen and (max-width: 768px) {
//   .row.text-babu.text-center {
//     width: 50%;
//     clear: both;
//     float: left;
//     padding: 20px;
//   }
// }

.text-babu, .icon-babu {
    line-height: 2;
}

body {
  color: #565a5c;
  background-color: #F8F8F8;
  font-family: "Varela Round", "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
  padding-bottom: 200px;
}

a {
  color: #34495E;
}

.container {
  width: 80%;
}

.container h3 {
  margin-right: -40px;
  margin-left: -40px;
}

div.panel-body {
  margin-right: -55px;
  margin-left: -55px;
}

.row {
  margin-right: -55px;
  margin-left: -55px;
}

.text-babu, .icon-babu {
  color: #34495E;
}

.text-blue, .icon-red {
  color: #14325C;
}

// NAVBARS
.navbar-default {
  background-color: #FFFFFF;
}

.navbar-default .navbar-brand {
  color: #2C3E50;
  font-size: 2.5em;
  font-weight: bold; font-family: Ubuntu;
  margin-top: 5px;
}

ul.nav.navbar-nav.navbar-right a {
  margin-top: 5px;
}

// BUTTONS
.btn-block {
  display: block;
  white-space: normal;
  width: 100%;
}

.btn {
  color: #fff;
  border-radius: 5px;
  padding: 9px 27px;
  font-family: Ubuntu;
}

.btn:hover, .btn:focus {
  color: #fff;
}

.btn.btn-default {
  width: 100%;
  border-color: #c4c4c4;
  background: white;
  color: #484848;
  border-radius: 2px;
  padding: 10px 0;
  margin-top: 10px;
}

.btn.btn-normal {
  border: 1px solid #34495E;
  background-color: #34495E;
}

.btn.btn-normal:active {
  outline: none;
  border-color: #e00007;
  background-color: #e00007;
}

.btn.btn-form {
  border: 1px solid #34495E;
  background-color: #34495E;
}

// .btn-small {
//   padding: 5px 15px;
//   margin-top: 15px;
// }

.btn.btn-form.btn-small {
  margin-left: 10px;
}

button.btn.btn-form.btn-small {
  margin-top: 10px;
}

.btn.btn-form:active {
  outline: none;
  border-color: #066165;
  background-color: #066165;
}

.btn.btn-facebook {
  border: 1px solid #3B5998;
  background-color: #3B5998;
}

.btn.btn-facebook:active {
  outline: none;
  border-color: #2d467b;
  background-color: #2d467b;
}

// PANELS
.panel-default .panel-heading {
  color: #ffffff;
  background-color: #2C3E50;
  font-size: 18px;
  font-weight: 400;
}

.row-space-1 {
  margin-top: 6px;
  margin-bottom: 6px;
}

.row-space-2 {
  margin-top: 12px;
  margin-bottom: 12px;
}

.row-space-3 {
  margin-top: 24px;
  margin-bottom: 24px;
}

.description {
  color: #575757;
  font-size: 15px;
  font-weight: 500;
  line-height: 25px;
}

// AVATAR
.avatar-small {
  width: 28px;
}

.avatar-medium {
  width: 48px;
}

.avatar-large {
  width: 68px;
}

.avatar-full {
  width: 100%;
}

// FORMS
.form-group {
  margin-bottom: 25px;
}

.form-control {
  border-radius: 2px;
  height: 4rem;
}

.form-group input {
  height: 45px;
  border: 1px solid #34495E;
}

.form-group textarea {
  border: 1px solid #34495E;
}

.form-group input[type="radio"] {
  height: 15px;
  margin-right: 10px;
}

.btn-group label {
  margin-right: 15px;
}

.form-group select {
  width: 100%;
  color: #565a5c;
  background-color: white;
  border: 1px solid #34495E;
  border-radius: 2px;
  padding: 10px;
  appearance: none;
  -moz-appearance: none; /* Firefox */
  -webkit-appearance: none; /* Safari & Chrome */
}

.select:before {
  content: '\25bc';
  font-size: 1.2em;
  position: absolute;
  color: #34495E;
  top: 35px;
  right: 30px;
  transform: scale(0.94, 0.62);
}

.form-group input[type="checkbox"] {
  height: 1.25em;
  width: 1.25em;
  margin-bottom: -0.25em;
  margin-right: 5px;
  vertical-align: top;
  border: 1px solid #34495E;
  border-radius: 2px;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
}

.form-group input[type="checkbox"]:checked:before {
  content: '\2713';
  position: absolute;
  font-size: 0.95em;
  text-align: center;
  width: 1.25em;
  color: #34495E;
}

// SIDEBAR
.sidebar-list {
  padding-left: 0;
  list-style: none;
}

.sidebar-item {
  padding: 10px 0;
  font-size: 16px;
  color: #82888a;
}

.sidebar-link {
  color: #82888a;
  text-decoration: none;
}

.sidebar-link:hover, .sidebar-link:focus {
  color: #CACCCD;
  text-decoration: none;
}

.active.sidebar-link {
  color: #565A5C;
  font-weight: bold;
  text-decoration: none;
}

// PHOTO UPLOAD
.btn-file {
  position: relative;
  overflow: hidden;
}

.btn-file input[type=file] {
  position: absolute;
  top: 0;
  right: 0;
  min-width: 100%;
  min-height: 100%;
  font-size: 100px;
  text-align: right;
  filter: alpha(opacity=0);
  opacity: 0;
  outline: none;
  background: white;
  cursor: inherit;
  display: block;
}

.panel-heading.preview {
  padding: 0;
}

.panel-heading.preview img {
  width: 100%;
  box-sizing: border-box;
}

// VENUE SHOW
.amenities li {
  margin-bottom: 10px;
  font-size: 16px;
  list-style-type: none;
}

.amenities .text-line-through {
  text-decoration: line-through;
  color: rgba(0,0,0,0.45);
  font-size: 14px;
}

div.price-box-wrapper {
  position: absolute;
  padding: 4px 8px;
  color: #fff;
  background-color: rgba(0,0,0,.5);
  text-align: center;
  box-sizing: border-box;
}

div.box-wrapper {
  padding: 4px 8px;
  color: #fff;
  // background-color: rgba(0,0,0,.5);
  box-sizing: border-box;
  font-size: 14px;
  // font-weight: 200;
}

// RESERVATIONS
.reservation-table td {
  width: 100%;
  border: none;
  border-bottom: 1px solid #dce0e0;
  padding: 10px;
}

.reservation-table .total td {
  font-size: 16px;
  font-weight: bold;
  border: none;
}

.form-control.datepicker {
  color: #34495E;
  background-color: white;
  text-align: center;
}

.message-alert {
  color: #d43242;
  font-size: 14px;
  padding-top: 10px;
}

// SEARCH
#main {
  height: 100%;
  overflow: hidden;
}

#left {
  padding: 10px 400px 10px 20px;
  overflow: scroll;
  height: 100%;
}

#right {
  position: fixed;
  top: 0;
  right: 0;
  width: 450px;
  height: 100%;
}

.map_price {
  text-align: center;
  font-size: 16px;
  font-weight: 600;
  color: #34495E;
}

// HOME PAGE
.discovery-card {
  background-size: cover;
  background-position: center;
  height: 326px;
}

.va-container {
  display: table;
  width: 100%;
  height: 100%;
}

.va-middle {
  color: #fff;
  vertical-align: middle;
  display: table-cell;
}

.banner {
  margin-top: 50px;
  margin-bottom: 50px;
}

// CALENDAR
.fc-content.Waiting {
  background-color: #C9CC6D;
}

.fc-past {
  background-color: lightgray;
}

.fc-day {
  position: relative;
}

.fc-content {
  background-color: #34495E;
  height: 40px;
  border-radius: 20px;
}

.fc-event {
  border: 0px;
  background-color: transparent;
}

.fc-title {
  font-size: 14px;
  position: relative;
  top: 7px;
  left: 20px;
}

.day-price {
  position: absolute;
  color: #EAA90B;
  bottom: 2px;
  right: 2px;
}

// NEW MESSAGE ALERT
.badge {
  background-color: #FF5A5F;
  position: relative;
  top: -15px;
  left: -5px;
}


//PAYMENT FORM
#add-card form {
  width: 480px;
  margin: 20px auto;
}

#add-card label {
  position: relative;
  color: #6A7C94;
  font-weight: 400;
  height: 48px;
  line-height: 48px;
  margin-bottom: 10px;
  display: block;
}

#add-card label > span {
  float: left;
}

.field {
  background: white;
  box-sizing: border-box;
  font-weight: 400;
  border: 1px solid #CFD7DF;
  border-radius: 14px;
  color: #32315E;
  outline: none;
  height: 48px;
  line-height: 48px;
  padding: 0 20px;
  cursor: text;
  width: 76%;
  float: right;
}

.field::-webkit-input-placeholder { color: #CFD7DF; }
.field::-moz-placeholder { color: #CFD7DF; }
.field:-ms-input-placeholder { color: #CFD7DF; }

.field:focus,
.field.StripeElement--focus {
  border-color: #34495E;
}

#add-card button {
  float: left;
  display: block;
  background-image: linear-gradient(-180deg, #34495E 0%, #2C3E50 100%);
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.10), inset 0 -1px 0 0 #34495D;
  color: white;
  border-radius: 15px;
  border: 0;
  font-size: 17px;
  font-weight: 500;
  width: 100%;
  height: 48px;
  line-height: 28px; //Centers the text
  outline: none;
  padding-bottom: 30px;
}

#add-card button:focus {
  background: #34495E;
}

#add-card button:active {
  background: #34495D;
}

.outcome {
  float: left;
  width: 100%;
  padding-top: 8px;
  min-height: 20px;
  text-align: center;
}

.success, .error {
  display: none;
  font-size: 13px;
}

.success.visible, .error.visible {
  display: inline;
}

.error {
  color: #E4584C;
}

